# next-shuttle-example-app

./: README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  update.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  configure.yml  dependabot-auto-merge.yml  deploy.yml
backend/: Cargo.toml  Shuttle.toml
backend/src/: main.rs
src/app/: page.tsx
