[package]
name = "static-next-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "^0.6.10"
axum-extra = { version = "^0.6.0", features = ["spa"] }
shuttle-axum = "^0.22.0"
shuttle-runtime = "^0.21.0"
shuttle-static-folder = "^0.21.0"
tokio = "^1.26.0"
tower-http = { version = "^0.4.0", features = ["fs", "trace"] }
